manifest/apps/staging/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-service
  namespace: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: reactapp
